Fix alignment of inline icons
With newer releases of the Tabler Icons web font, the placement of the
icons slightly changed. This adjusts the vertical margin accordingly in
order to center inline icons properly.

--- a/assets/scss/_basic-elements.sass
+++ b/assets/scss/_basic-elements.sass
@@ -47,7 +47,7 @@ a:visited
 		text-decoration: underline;
 
 .icon
-	vertical-align: -0.14em
+	vertical-align: -0.04em
 	margin-right: 0.5em
 
 	// Don’t underline icons in links
